--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,8 +21,8 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
-          username: ${{ secrets.dop_v1_9d48a6b879a961a88391abb591c337a6ba5b43d27def45f2bfd6d1af93184aa9}}
-          password: ${{ secrets.dop_v1_9d48a6b879a961a88391abb591c337a6ba5b43d27def45f2bfd6d1af93184aa9}}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       # Build and push backend image
       - name: Build and push backend image
